[tool.poetry]
name = "sensitivity-matcher"
version = "0.1.0"
description = ""
authors = ["Stéphane Travostino <steph@combo.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
evdev = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
